--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
             <ul id="menu" role="menu">
                 <li><a href="/">JLF</a></li>
                 <li><a href="/">EM-5</a></li>
+                            <img class="img-adapter" src="img/donatelo.png" alt="" style="margin-top:-10px;">
             </ul>
+
         </nav>
     </header>
     <div class="container-geral d-flex flex-column justify-content-center align-items-center">
-        <div>
+
             <img class="img-adapter" src="img/donatelo.png" alt="">
-        </div>
+
     </div>
     <div>
         <p class="description-home">
