--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul id="menu" role="menu">
                 <li><a href="/">JLF</a></li>
                 <li><a href="/">EM-5</a></li>
-                            <img class="img-adapter" src="img/donatelo.png" alt="" style="margin-top:-10px;">
+                            <img class="img-adapter sumir-desktop mx-auto" src="img/donatelo.png" alt="" style="margin-top:-10px;">
             </ul>
 
         </nav>
