--- a/index.html
+++ b/index.html
@@ -40,21 +40,20 @@
             fértil e saudável.
         </p>
     </div>
-    <div class="d-flex flex-column justify-content-center align-items-center gap-button">
-                <a href="" style="color:white; text-decoration: none;" class="text-center">
-                    <div class="button d-flex flex-column justify-content-center align-items-center">
-                            <span class="nome-button">JLF</span>
-                            <span class="text-black">Bio-Fertilizante</span>
-                    </div>
-                </a>
-                <a href="" style="color:white; text-decoration: none;" class="text-center">
-                    <div class="button d-flex flex-column justify-content-center align-items-center">
-                            <span class="nome-button">EM-5</span>
-                            <span class="text-black">Defensivo / Inoculante</span>
-                    </div>
-                </a>
+    <div class="d-flex flex-row justify-content-center align-items-center gap-button botoes-fixos" style="padding: 20px; margin-bottom: 0;">
+        <a href="" style="color:white; text-decoration: none;" class="text-center">
+            <div class="button d-flex flex-column justify-content-center align-items-center">
+                    <span class="nome-button">JLF</span>
+                    <span class="text-black">Bio-Fertilizante</span>
+            </div>
+        </a>
+        <a href="" style="color:white; text-decoration: none;" class="text-center">
+            <div class="button d-flex flex-column justify-content-center align-items-center">
+                    <span class="nome-button">EM-5</span>
+                    <span class="text-black">Defensivo / Inoculante</span>
+            </div>
+        </a>
     </div>
-
 <script type="text/javascript" src="script.js">
 </script>
 </body>
