jlf e em-g adicionado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header id="header">
-        <a href="/">
+        <a href="#home">
             <h1>Giga Haze</h1>
         </a>
         <nav id="nav">
@@ -28,32 +28,103 @@
 
         </nav>
     </header>
-    <div class="container-geral d-flex flex-column justify-content-center align-items-center">
-
-            <img class="img-adapter" src="img/donatelo.png" alt="">
+    <section id="home">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <p class="description-home" style="margin-top: 20dvh;">
+                Mais vida para o solo
+                mais saúde para as plantas.
+            </p>
+            <div class="container-geral d-flex flex-column justify-content-center align-items-center">
+                    <img class="img-adapter" src="img/donatelo.png" alt="">
+            </div>
+            <div>
+                <p class="description-home">
+                    Soluções naturais
+                    para um solo mais 
+                    fértil e saudável.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="jlf">
+        <div class="d-flex flex-column justify-content-center align-items-center"  >
+            <img src="img/JLF.png" alt="" class="img-produto" style="margin-top: 10dvh;">
+            <p class="text-white text-center description-produto" style="margin-top: 0;">
+                <span class="destaque-description-produto">JLF</span> é um biofertilizante líquido, obtido pela fermentação de resíduos vegetais, que fornece nutrientes e microorganismos benéficos para o solo, promovendo a saúde e o equilíbrio do ambiente de cultivo.
+            </p>   
+            <a href="https://wa.me/5522992635691" class="text-center" style=margin-bottom:20px;>
+                <div class="button d-flex flex-column justify-content-center align-items-center button-comprar">
+                    <span class="nome-button text-black font-primary">Comprar</span>
+                </div>
+            </a>
+                <div style="padding: 0 50px; background-color: #1c1c1c;">    
+                    <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
+                        <p style="font-size: 1.5rem; color:greenyellow; margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
+                        <p class="text-white text-center font-secondary" style="margin-top: 0;">
+                            <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 5 ml de JLF por litro de água.</span> <br> Aplicar 1 vez por semana
+                        </p>
+                    </div>
+                    <hr>
+                    <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
+                        <p style="font-size: 1.5rem; color:greenyellow; margin: 20px 0;" class="font-secondary text-center">Dose de Correção:</p>
+                        <p class="text-white text-center font-secondary">
+                            <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 10 ml de JLF por litro de água.</span> <br> Indicado quando há sinais de deficiência nutricional ou estresse na planta
+                        </p>
+                    </div>
+                </div>
+        </div>
+        
+    </section>
+    <section id="em5">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <img src="img/EM-5.png" alt="" class="img-produto" style="margin-top: 10dvh;">
+            <p class="text-white text-center description-produto" style="margin-top: 0;">
+                <span class="destaque-description-produto">EM-5</span> é um defensivo natural, elaborado a partir da combinação de microorganismos eficientes, álcool, vinagre e ingredientes naturais como extratos vegetais. Ele atua como repelente de pragas, protetor de culturas e estimulante da microbiota benéfica do solo.
+            </p>   
+            <a href="https://wa.me/5522992635691" class="text-center" style=margin-bottom:20px;>
+                <div class="button d-flex flex-column justify-content-center align-items-center button-comprar">
+                    <span class="nome-button text-black font-primary">Comprar</span>
+                </div>
+            </a>
+            <div style="padding: 0 50px; background-color: #1c1c1c;">    
+                <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
+                    <p style="font-size: 1.5rem; color:greenyellow; margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
+                    <p class="text-white text-center font-secondary" style="margin-top: 0;">
+                        <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 3 ml de EM-5 por litro de água.</span> <br> Aplicar 1 vez a cada 15 dias
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center" style="margin-top: 15px;">
+            <a href="https://wa.me/5522992635691" class="text-center">
+                <div class="button d-flex flex-column justify-content-center align-items-center button-duvida">
+                    <span class="nome-button text-black font-primary">Tirar Dúvidas</span>
+                </div>
+            </a>
+        </div>
+    </section>
+    <div style="height: 100px;">
 
     </div>
-    <div>
-        <p class="description-home">
-            Soluções naturais
-            para um solo mais 
-            fértil e saudável.
-        </p>
-    </div>
-    <div class="d-flex flex-row justify-content-center align-items-center gap-button botoes-fixos" style="padding: 20px; margin-bottom: 0;">
-        <a href="" style="color:white; text-decoration: none;" class="text-center">
-            <div class="button d-flex flex-column justify-content-center align-items-center">
+
+
+
+    <footer>
+        <div class="d-flex flex-row justify-content-center align-items-center gap-button botoes-fixos" style="padding: 20px; margin-bottom: 0;">
+            <a href="#jlf" style="color:white; text-decoration: none;" class="text-center" >
+                <div class="button d-flex flex-column justify-content-center align-items-center jlf-style ">
                     <span class="nome-button">JLF</span>
-                    <span class="text-black">Bio-Fertilizante</span>
-            </div>
-        </a>
-        <a href="" style="color:white; text-decoration: none;" class="text-center">
-            <div class="button d-flex flex-column justify-content-center align-items-center">
+                    <span class="text-black description-button">Nutrição / Bio-Fert</span>
+                </div>
+            </a>
+            <a href="#em5" style="color:white; text-decoration: none;" class="text-center ">
+                <div class="button d-flex flex-column justify-content-center align-items-center em-5-style">
                     <span class="nome-button">EM-5</span>
-                    <span class="text-black">Defensivo / Inoculante</span>
-            </div>
-        </a>
-    </div>
+                    <span class="text-black description-button">Defensivo / Inoculante</span>
+                </div>
+            </a>
+        </div>
+    </footer>
 <script type="text/javascript" src="script.js">
 </script>
 </body>
