--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     </section>
     <section id="jlf">
         <div class="d-flex flex-column justify-content-center align-items-center"  >
-            <img src="img/JLF.png" alt="" class="img-produto" style="margin-top: 10dvh;">
+            <div class="img-produto" style="margin-top: 10vh;">
+                <img src="img/JLF.png" alt="">
+            </div>
             <p class="text-white text-center description-produto" style="margin-top: 0;">
                 <span class="destaque-description-produto">JLF</span> é um biofertilizante líquido, obtido pela fermentação de resíduos vegetais, que fornece nutrientes e microorganismos benéficos para o solo, promovendo a saúde e o equilíbrio do ambiente de cultivo.
             </p>   
@@ -68,7 +70,7 @@
                     <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
                         <p style="font-size: 1.5rem; color:greenyellow; margin: 20px 0;" class="font-secondary text-center">Dose de Correção:</p>
                         <p class="text-white text-center font-secondary">
-                            <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 10 ml de JLF por litro de água.</span> <br> Indicado quando há sinais de deficiência nutricional ou estresse na planta
+                            <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 10 ml de JLF por litro de água.</span> <br> Indicado quando há sinais de deficiência nutricional na planta
                         </p>
                     </div>
                 </div>
@@ -77,7 +79,9 @@
     </section>
     <section id="em5">
         <div class="d-flex flex-column justify-content-center align-items-center">
-            <img src="img/EM-5.png" alt="" class="img-produto" style="margin-top: 10dvh;">
+            <div class="img-produto" style="margin-top: 10vh;">
+                <img src="img/EM-5.png" alt="">
+            </div>
             <p class="text-white text-center description-produto" style="margin-top: 0;">
                 <span class="destaque-description-produto">EM-5</span> é um defensivo natural, elaborado a partir da combinação de microorganismos eficientes, álcool, vinagre e ingredientes naturais como extratos vegetais. Ele atua como repelente de pragas, protetor de culturas e estimulante da microbiota benéfica do solo.
             </p>   
