--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             </a>
                 <div style="padding: 0 50px; background-color: #1c1c1c;">    
                     <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
-                        <p style="font-size: 1.5rem; color:greenyellow; margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
+                        <p style="font-size: 1.5rem; color:rgb(255, 255, 255); margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
                         <p class="text-white text-center font-secondary" style="margin-top: 0;">
                             <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 5 ml de JLF por litro de água.</span> <br> Aplicar 1 vez por semana
                         </p>
                     </div>
                     <hr>
                     <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
-                        <p style="font-size: 1.5rem; color:greenyellow; margin: 20px 0;" class="font-secondary text-center">Dose de Correção:</p>
+                        <p style="font-size: 1.5rem; color:rgb(255, 255, 255); margin: 20px 0;" class="font-secondary text-center">Dose de Correção:</p>
                         <p class="text-white text-center font-secondary">
                             <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 10 ml de JLF por litro de água.</span> <br> Indicado quando há sinais de deficiência nutricional na planta
                         </p>
@@ -92,19 +92,12 @@
             </a>
             <div style="padding: 0 50px; background-color: #1c1c1c;">    
                 <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
-                    <p style="font-size: 1.5rem; color:greenyellow; margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
+                    <p style="font-size: 1.5rem; color:rgb(255, 255, 255); margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
                     <p class="text-white text-center font-secondary" style="margin-top: 0;">
                         <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 3 ml de EM-5 por litro de água.</span> <br> Aplicar 1 vez a cada 15 dias
                     </p>
                 </div>
             </div>
-        </div>
-        <div class="d-flex justify-content-center" style="margin-top: 15px;">
-            <a href="https://wa.me/5522992635691" class="text-center">
-                <div class="button d-flex flex-column justify-content-center align-items-center button-duvida">
-                    <span class="nome-button text-black font-primary">Tirar Dúvidas</span>
-                </div>
-            </a>
         </div>
     </section>
     <div style="height: 100px;">
