--- a/index.html
+++ b/index.html
@@ -59,21 +59,24 @@
                     <span class="nome-button text-black font-primary">Comprar</span>
                 </div>
             </a>
-                <div style="padding: 0 50px; background-color: #1c1c1c;">    
-                    <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
-                        <p style="font-size: 1.5rem; color:rgb(255, 255, 255); margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
-                        <p class="text-white text-center font-secondary" style="margin-top: 0;">
-                            <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 5 ml de JLF por litro de água.</span> <br> Aplicar 1 vez por semana
-                        </p>
-                    </div>
-                    <hr>
-                    <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
-                        <p style="font-size: 1.5rem; color:rgb(255, 255, 255); margin: 20px 0;" class="font-secondary text-center">Dose de Correção:</p>
-                        <p class="text-white text-center font-secondary">
-                            <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 10 ml de JLF por litro de água.</span> <br> Indicado quando há sinais de deficiência nutricional na planta
-                        </p>
-                    </div>
+            <div style="padding: 0 50px; background-color: #1c1c1c;">    
+                <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
+                    <p style="font-size: 1rem; color:rgb(255, 255, 255); margin: 0.3rem 0;" class="font-secondary text-center">Dose de Manutenção</p>
+                    <p class="text-white text-center font-secondary" style="margin-top: 0; margin: 0 0; font-size:0.8rem">
+                        <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 3 ml de JLF por litro de água.</span> <br> Aplicar 1 vez a cada 7 dias
+                    </p>
                 </div>
+            </div>
+
+            <div style="padding: 0 50px; background-color: #1c1c1c;">    
+                <hr>
+                <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
+                    <p style="font-size: 1rem; color:rgb(255, 255, 255); margin: 0.3rem 0;" class="font-secondary text-center">Dose de Correção</p>
+                    <p class="text-white text-center font-secondary" style="margin-top: 0; margin: 0 0; font-size:0.8rem">
+                        <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 10 ml de JLF por litro de água.</span> <br> Aplicar apenas quando a planta apresentar deficiencia
+                    </p>
+                </div>
+            </div>
         </div>
         
     </section>
@@ -87,13 +90,13 @@
             </p>   
             <a href="https://wa.me/5522992635691" class="text-center" style=margin-bottom:20px;>
                 <div class="button d-flex flex-column justify-content-center align-items-center button-comprar">
-                    <span class="nome-button text-black font-primary">Comprar</span>
+                    <span class="text-black font-primary">Comprar</span>
                 </div>
             </a>
             <div style="padding: 0 50px; background-color: #1c1c1c;">    
                 <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
-                    <p style="font-size: 1.5rem; color:rgb(255, 255, 255); margin: 20px 0;" class="font-secondary text-center">Dose de Manutenção:</p>
-                    <p class="text-white text-center font-secondary" style="margin-top: 0;">
+                    <p style="font-size: 1rem; color:rgb(255, 255, 255); margin: 0.3rem 0;" class="font-secondary text-center">Dose de Manutenção</p>
+                    <p class="text-white text-center font-secondary" style="margin-top: 0; margin: 0 0; font-size:0.8rem">
                         <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 3 ml de EM-5 por litro de água.</span> <br> Aplicar 1 vez a cada 15 dias
                     </p>
                 </div>
