--- a/index.html
+++ b/index.html
@@ -59,16 +59,13 @@
                     <span class="nome-button text-black font-primary">Comprar</span>
                 </div>
             </a>
-            <div style="padding: 0 50px; background-color: #1c1c1c;">    
+            <div style="padding: 0 0; background-color: #1c1c1c; width: 100%;">    
                 <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
                     <p style="font-size: 1rem; color:rgb(255, 255, 255); margin: 0.3rem 0;" class="font-secondary text-center">Dose de Manutenção</p>
                     <p class="text-white text-center font-secondary" style="margin-top: 0; margin: 0 0; font-size:0.8rem">
                         <span class="font-secondary" style="background-color: rgb(31, 72, 107); padding: 2px 10px;">Diluir 3 ml de JLF por litro de água.</span> <br> Aplicar 1 vez a cada 7 dias
                     </p>
-                </div>
-            </div>
-
-            <div style="padding: 0 50px; background-color: #1c1c1c;">    
+                </div>  
                 <hr>
                 <div style="letter-spacing: 1.2px; line-height: 1.1rem;">
                     <p style="font-size: 1rem; color:rgb(255, 255, 255); margin: 0.3rem 0;" class="font-secondary text-center">Dose de Correção</p>
@@ -110,7 +107,7 @@
 
 
     <footer>
-        <div class="d-flex flex-row justify-content-center align-items-center gap-button botoes-fixos" style="padding: 20px; margin-bottom: 0;">
+        <div class="d-flex flex-row justify-content-center align-items-center gap-button botoes-fixos" style="padding: 10px; margin-bottom: 0; background-color: black;">
             <a href="#jlf" style="color:white; text-decoration: none;" class="text-center" >
                 <div class="button d-flex flex-column justify-content-center align-items-center jlf-style ">
                     <span class="nome-button">JLF</span>
